# observer_manager

./: Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_uuid_refactor.py  0003_telegram_group_fk.py  0004_invited_users.py
app/: auth.py  database.py  dependencies.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: api_keys.py  applications.py  health.py  internal.py  organizations.py  telegram.py  users.py
app/assets/alerts/: high_cpu.json  high_disk.json  high_ram.json
app/core/: __init__.py  config.py  security.py
app/dashboard_templates/: application_overview.json  logs_explorer.json
app/db/: __init__.py  session.py
app/models/: __init__.py  api_key.py  application.py  associations.py  invited_user.py  organization.py  telegram_group.py  user.py
app/routers/: api_keys.py  applications.py  organizations.py  webhooks.py
app/schemas/: api_key.py  application.py  common.py  organization.py  telegram_group.py  user.py  webhook.py
app/services/: alert_setup.py  glitchtip_client.py  grafana_client.py  key_generator.py  nginx_manager.py  organization_service.py  rollback_manager.py  telegram.py  user_service.py
app/services/clients/: glitchtip_client.py  grafana_client.py
